# immvision

./: .gitignore  .gitmodules  Build.md  CHANGELOG.md  CMakeLists.txt  DocElements.md  README.md  TODO.md  conanfile.txt  conanfile_linux.txt  conanfile_opencv.txt  find_opencv.cmake  project_structure.md  pyproject.toml  setup.py  study.md
_skbuild_template/: CMakeLists.txt  CMakeUtilities.py  README.md
_skbuild_template/.github/workflows/: conda.yml
_skbuild_template/pybind_src/immvision/: __init__.py  imgui_runner.py
_skbuild_template/src_pybind/: main.cpp
_skbuild_template/src_pybind/immvision/: _gl_provider_sentinel.py
cmake/: activate_warnings.cmake  build_opencv.sh  fetch_hello_imgui.cmake  (+2 more)
immdebug_python/: .gitignore  README.md  pyproject.toml
immdebug_python/immdebug/: __init__.py  __main__.py  client.py  test_debug.py  viewer.py
immvision_pybind/: .gitignore  CMakeLists.txt  CmakeUtilities.py  README.md  setup.py
immvision_pybind/.github/workflows/: conda.yml
immvision_pybind/conda.recipe/: meta.yaml
immvision_pybind/debug_helper/: pybind_debug_helper.cpp  pybind_debug_helper.py
immvision_pybind/example_usages/: example_immvision.py  example_np_array_info.py  image_rgba_to_texture.py  imgui_runner.py
immvision_pybind/examples/: example_immvision.py  run_example_immvision.sh
immvision_pybind/src/: main.cpp  numpy_opencv_convert.h  postbuild_deploy.py
immvision_pybind/src/glad/include/glad/: glad.h
immvision_pybind/src/glad/src/: glad.c
immvision_pybind/src/immvision/: __init__.py  _gl_provider_python.py  gl_provider_python.py  gl_provider_sentinel.py  test.py
immvision_pybind/tests/: test_basic.py  test_core.py
src/: CMakeLists.txt
src/demos_immvision/: CMakeLists.txt
src/demos_immvision/demo_imm_inspector/: CMakeLists.txt  demo_imm_inspector.main.cpp
src/demos_immvision/demo_imm_mandelbrot/: CMakeLists.txt  demo_imm_mandelbrot.main.cpp
src/demos_immvision/demo_imm_mandelbrot/assets/: locations.json
src/demos_immvision/demo_immdebug/: CMakeLists.txt  demo_immdebug.main.cpp
src/demos_immvision/demo_immvision/: CMakeLists.txt  demo_immvision.main.cpp
src/demos_immvision/demo_inspector/: CMakeLists.txt  demo_inspector.main.cpp
src/demos_immvision/deprecated/demo_imm_mandelbrot/: TODO_mandel.txt  demo_imm_mandelbrot.main.cpp
src/demos_immvision/deprecated/immvision_python_examples/: example_fig.py
src/immdebug/: CMakeLists.txt  immdebug.cpp  immdebug.h  immdebug.py  immdebug_internal.cpp  immdebug_internal.h
src/immdebug_viewer/: CMakeLists.txt  immdebug_viewer.cpp  immdebug_viewer.py  single_instance_app.cpp  single_instance_app.h
src/immvision/: CMakeLists.txt  gl_texture.h  image.cpp  image.h  image_cv.cpp  image_cv.h  image_gl.cpp  image_gl.h  image_navigator.cpp  image_navigator.h  imgui_imm.h  immvision.cpp  immvision.h  immvision_types.cpp  immvision_types.h  inspector.cpp  inspector.h
src/immvision/internal/: color_adjustment_utils.cpp  color_adjustment_utils.h  cv_drawing_utils.cpp  cv_drawing_utils.h  gl_provider.cpp  gl_provider.h  gl_provider_python.cpp  gl_texture.cpp  gl_texture.h  image.cpp  image_cache.cpp  image_cache.h  image_navigator.cpp  image_navigator_cache.cpp  image_navigator_cache.h  image_navigator_drawing.cpp  image_navigator_drawing.h  image_navigator_widgets.cpp  image_navigator_widgets.h  image_params_serialize.cpp  imgui_ext.cpp  imgui_ext.h  imgui_imm.cpp  imgui_imm.h  imgui_imm_gl_image.cpp  imgui_imm_gl_image.h  inspector.cpp  internal_icons.cpp  internal_icons.h  matrix_info_utils.cpp  opencv_pybind_converter.cpp  opencv_pybind_converter.h  portable_file_dialogs.h  short_lived_cache.cpp  short_lived_cache.h  zoom_pan_transform.cpp
src/immvision/internal/cv/: color_adjustment_utils.cpp  color_adjustment_utils.h  colormap.cpp  colormap.h  convert_to_rgba.cpp  convert_to_rgba.h  cv_drawing_utils.cpp  cv_drawing_utils.h  drawing_utils.cpp  drawing_utils.h  matrix_info_utils.cpp  matrix_info_utils.h  zoom_pan_transform.cpp  zoom_pan_transform.h
src/immvision/internal/drawing/: colormap.cpp  colormap.h  draw_list_annotate.cpp  draw_list_annotate.h  image_drawing.cpp  image_drawing.h  image_navigator_drawing.cpp  image_navigator_drawing.h  internal_icons.cpp  internal_icons.h
src/immvision/internal/gl/: gl_provider.cpp  gl_provider.h  gl_texture.cpp  gl_texture.h  imgui_imm_gl_image.cpp  imgui_imm_gl_image.h  short_lived_cache.cpp  short_lived_cache.h
src/immvision/internal/imgui/: image_navigator_widgets.cpp  image_navigator_widgets.h  image_widgets.cpp  image_widgets.h  imgui_imm.cpp  imgui_imm.h
src/immvision/internal/misc/: debugbreak.h  immvision_to_string.cpp  immvision_to_string.h  insertion_order_map.cpp  insertion_order_map.h  magic_enum.hpp  math_utils.cpp  math_utils.h  panic.cpp  panic.h  parallel_for.h  portable_file_dialogs.h  string_utils.cpp  string_utils.h  tinycolormap.hpp
src/immvision/internal/stb/: stb_image_impl.cpp  stb_image_write_impl.cpp
src/immvision/internal/sys/: portable_file_dialogs.h
src/immvision_demos/: CMakeLists.txt
src/immvision_demos/imgui_sdl_opengl3_runner/: CMakeLists.txt  README.md  imgui_sdl_opengl3_runner.cpp  imgui_sdl_opengl3_runner.h
src/immvision_demos/immdebug_demo/: CMakeLists.txt  immdebug_demo.cpp
src/immvision_demos/immvision_demo/: CMakeLists.txt  immvision_demo.cpp  mandelbrot.cpp  mandelbrot.h
src/immvision_demos/immvision_simple_runner/: CMakeLists.txt  README.md  immvision_simple_runner.cpp  immvision_simple_runner.h  immvision_simple_runner_glfw.cpp  immvision_simple_runner_sdl.cpp
src/immvision_demos/inspector_demo/: CMakeLists.txt  datestr.h  inspector_demo.cpp
src/immvision_demos/mandelbrot_demo_cpp/: CMakeLists.txt  mandelbrot_demo_cpp.cpp  nlohmann_json.hpp
src/immvision_gl_loader/: CMakeLists.txt  immvision_gl_loader.cpp  immvision_gl_loader.h  immvision_include_opengl.cpp  immvision_include_opengl.h
src/tests/: CMakeLists.txt  test_immvision_internals.cpp
src_all_in_one/: CMakeLists.txt
src_all_in_one/immvision/: CMakeLists.txt  build_immvision_manually.sh  immvision.cpp  immvision.h
(+131 files in other folders)
